--- a/css/custom.css
+++ b/css/custom.css
@@ -127,8 +127,9 @@ h1, h2, h3 {
     padding: 14px;
 }
 .share {
-    text-align: center;
     padding: 10px;
+    width: 300px;
+    margin: auto;
 }
 .mainContent {
     padding: 0 20px;
