--- a/css/custom.css
+++ b/css/custom.css
@@ -267,6 +267,7 @@ h1, h2, h3 {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
     transition-duration: 0.3s;
     vertical-align: bottom;
+    cursor: pointer;
 }
 .digiTabs > li.selected {
     background-color: #fff;
