--- a/css/custom.css
+++ b/css/custom.css
@@ -322,3 +322,9 @@ h1, h2, h3 {
     float: right;
     margin-left: 10px;
 }
+
+.i18n_container {
+    width: 300px;
+    margin: auto;
+    margin-top: 200px;
+}
