--- a/css/custom.css
+++ b/css/custom.css
@@ -206,6 +206,8 @@ h1, h2, h3 {
   .features .ft_f {
     font-size: 1.3em;
     padding: 5px; }
+  .features i {
+    font-size: 25px; }
 
 .notice {
   font-size: 0.8em;
