--- a/css/style.scss
+++ b/css/style.scss
@@ -2,31 +2,38 @@
  * Actionbar color = #12A1E3
  * Statusbar color = #1184C3
  */
+$color-primary: #2196F3;
+$color-primary-dark: #1565C0;
 
 body {
 	margin-top: 0;
 	background-color: #f9f9f9;
 	font-size: 16px;
+	font-family: 'Roboto', sans-serif;
 }
 h1, h2, h3 {
-	font-family: 'Roboto Condensed', sans-serif;
-	color: #1184C3;
+	color: $color-primary-dark;
 	font-weight: normal;
 }
 
-.container {
-	max-width: 865px;
-	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1);
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+@media (min-width: 1200px) {
+	.container{
+		max-width: 865px;
+	}
 }
 
-.header {
-	font-family: 'Roboto Condensed', sans-serif;
+.content {
+	box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.1);
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
+	margin-top: 15px;
+}
+
+header {
 	background: url('../img/bg.jpg') no-repeat left bottom;
 	padding: 10px 20px;
-	border-top-left-radius: 4px;
-	border-top-right-radius: 4px;
+	border-top-left-radius: 2px;
+	border-top-right-radius: 2px;
 	color: #fff;
 
 	.header-right {
@@ -76,9 +83,6 @@ h1, h2, h3 {
 			margin: 0;
 
 			li {
-				background: url('../img/accept.png') no-repeat left center;
-				min-height: 25px;
-				padding-left: 36px;
 				font-size: 18px;
 			}
 		}
@@ -173,7 +177,6 @@ h1, h2, h3 {
 	overflow: hidden;
 	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 	font-size: 26px;
-	font-family: 'Roboto Condensed', sans-serif;
 	text-align: center;
 	line-height: 46px;
 }
@@ -221,20 +224,18 @@ h1, h2, h3 {
 	border-collapse: collapse;
 	color: #555;
 
-	.ft_head, .ft_foot { background-color: #12A1E3; }
+	.ft_head, .ft_foot { background-color: $color-primary; }
 	.ft_foot {
 		font-size: 0.9em;
 		color: #fff;
 		font-weight: bold;
 		text-align: center;
-		font-family: 'Roboto Condensed', sans-serif;
 	}
 	.ft_h {
 		width: 33%;
 		padding: 5px;
 		text-align: center;
 		color: #fff;
-		font-family: 'Roboto Condensed', sans-serif;
 		font-size: 1.3em;
 	}
 	.ft_b {
@@ -270,7 +271,7 @@ h1, h2, h3 {
 
 		> li {
 			display: inline-block;
-			background-color: #12A1E3;
+			background-color: $color-primary;
 			padding: 1px 5px;
 			font-size: 12px;
 			letter-spacing: -1px;
@@ -285,7 +286,7 @@ h1, h2, h3 {
 
 			&.selected {
 				background-color: #fff;
-				color: #12A1E3;
+				color: $color-primary;
 				padding-top: 0;
 				padding-bottom: 2px;
 			}
