--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -5,9 +5,10 @@
 	-ms-border-radius: $radius;
 	border-radius: $radius;
 }
-@mixin box-shadow($shadow1, $shadow2:false) {
+@mixin box-shadow($shadow1, $shadow2:false, $shadow3:false) {
 	$params: $shadow1;
 	@if $shadow2 { $params: $shadow1, $shadow2; }
+	@if $shadow3 { $params: $shadow1, $shadow2, $shadow3; }
 	-webkit-box-shadow: $params;
 	-moz-box-shadow: $params;
 	-o-box-shadow: $params;
