--- a/css/style.scss
+++ b/css/style.scss
@@ -11,19 +11,11 @@ $content-offset: 45px;
 $font-roboto: 'Roboto', sans-serif;
 $font-roboto-slab: 'Roboto Slab', serif;
 
-.elevation-middle { box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); }
+.elevation-medium { box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2); }
 .elevation-high { box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2); }
 .elevation-low { box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15); }
+.elevation-inset { box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.2); }
 .elevation-none { box-shadow: none; }
-
-.hoverable {
-	@include transition-duration(150ms);
-
-	&:hover {
-		text-decoration: none;
-		background-color: rgba(0, 0, 0, 0.1);
-	}
-}
 
 .clear-after {
 	&:after {
@@ -110,7 +102,7 @@ header {
 .content {
 	margin-bottom: 15px;
 	background-color: #fff;
-	@extend .elevation-middle;
+	@extend .elevation-medium;
 	border-radius: 2px;
 }
 
@@ -165,29 +157,27 @@ header {
 }
 
 .button {
-	@extend .hoverable;
-	@include transition-duration(200ms);
 	border-radius: 2px;
+	@include transition-duration(200ms);
 
 	&:hover {
 		color: inherit;
 		text-decoration: none;
 	}
 	&:focus, &:active {
+		text-decoration: none;
 		outline: none;
 		box-shadow: inset 0 1px 0 0 rgba(0,0,0,0.2);
 	}
 
 	&.button-elevated {
-		box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 3px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 0 rgba(0,0,0,0.2);
+		@extend .elevation-low;
 
 		&:hover {
-			background: #eee;
-			box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.2), inset 0 0 0 0 rgba(0,0,0,0.2);
+			@extend .elevation-medium;
 		}
 		&:focus, &:active {
-			background: #ddd;
-			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.2);
+			@extend .elevation-inset;
 		}
 	}
 }
@@ -201,30 +191,41 @@ header {
 		position: fixed;
 		top: 0;
 		z-index: 2;
-		@extend .elevation-middle;
+		@extend .elevation-medium;
 	}
 	.gplay_link {
-		background-color: #fff;
+		color: #444444;
+		background-color: #ffffff;
 		padding: 5px 16px;
 		position: relative;
 		display: inline-block;
 		margin: 5px 12px;
 		font-size: 17px;
 
-		img {
-			width: 48px;
+		i {
 			float: left;
-			margin: 0 12px 0px -9px;
+			font-size: 36px;
+			margin: 3px 10px 0 -10px;
+			color: $color-primary;
+		}
+
+		small {
+			display: block;
+			text-align: left;
+			opacity: 0.7;
+			font-size: 13px;
 		}
 	}
 }
 
 @media (min-width: 645px) {
+	$height: 64px;
+
 	.gplay_container {
-		height: 70px;
+		height: $height;
 	}
 	.gplay {
-		height: 70px;
+		height: $height;
 	}
 }
 
@@ -232,13 +233,8 @@ header {
 	padding: 10px;
 	width: 300px;
 	max-width: 100%;
+	min-height: 45px;
 	margin: auto;
-
-	ul li {
-		display: inline-block;
-		text-align: center;
-		padding: 14px;
-	}
 }
 
 p {
@@ -260,7 +256,7 @@ p {
 			text-align: center;
 			overflow: hidden;
 			border-radius: 50%;
-			@extend .elevation-middle;
+			@extend .elevation-medium;
 		}
 		.green { background-color: #0f9d58; }
 
@@ -399,7 +395,7 @@ p {
 	margin-top: 10px;
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 2px;
-	@extend .elevation-middle;
+	@extend .elevation-medium;
 
 	span {
 		font-size: 22px;
@@ -426,7 +422,7 @@ p {
 			overflow-x: hidden;
 			text-align: center;
 			border-radius: 3px;
-			@extend .elevation-middle;
+			@extend .elevation-medium;
 		}
 	}
 }
