--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,7 +2,7 @@
  * www.munin-for-android.com
  */
 
-@import "../bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import "../../bower_components/bourbon/app/assets/stylesheets/bourbon";
 
 $color-primary: #2196F3;
 $color-primary-dark: #1565C0;
@@ -326,7 +326,9 @@ p {
 
 	tbody {
 		tr {
-			&.ft_i { background-color: #F5F5F5; }
+            &:nth-child(odd) {
+                background-color: #F5F5F5;
+            }
 
 			td {
 				text-align: center;
