Add privacy policy link

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -207,7 +207,11 @@
                 </div>
             </div>
             <div class="col-md-12 copyright">
-                <p>Munin for Android &copy; {{ 'now'|date('Y') }} <a href="https://www.s-quent.in" target="_blank">Quentin Stoeckel</a></p>
+                <p>
+                    Munin for Android &copy; {{ 'now'|date('Y') }} <a href="https://www.quentin-stoeckel.com" target="_blank">Quentin Stoeckel</a>
+                    &bullet;
+                    <a href="https://www.quentin-stoeckel.com/privacy-policy/munin-for-android" target="_blank">Privacy policy</a>
+                </p>
             </div>
         </div>
     </div>
