--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -177,8 +177,9 @@
                     <div class="row">
                         <div class="col-md-7">
                             <h2>Is my server supported?</h2>
-                            <p>Yes it is! Munin for Android is compatible with almost every Munin version and server configuration,
-                                even if you use <a href="https://github.com/jonnymccullagh/munstrap#munstrap">Munstrap</a>.
+                            <p>Yes it is! Munin for Android is compatible with almost every Munin version and server configuration!
+                                If you have any issue with <a href="https://github.com/jonnymccullagh/munstrap#munstrap">Munstrap</a>,
+                                please <a href="https://github.com/chteuchteu/Munin-for-Android/issues/40">read this thread</a>.
                                 If you think that your server isn't supported, feel free to
                                 <a href="mailto:support@munin-for-android.com">contact me</a> so we can discuss about it!</p>
                         </div>
