--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -2,8 +2,6 @@
  * www.munin-for-android.com
  */
 
-@import "../../bower_components/bourbon/app/assets/stylesheets/bourbon";
-
 $color-primary: #2196F3;
 $color-primary-dark: #1565C0;
 $content-offset: 45px;
@@ -81,7 +79,7 @@ header {
 			margin: 0 2px;
 			padding: 6px 11px;
 			border-radius: 2px;
-			@include transition-duration(150ms);
+			transition-duration: 150ms;
 
 			&:hover {
 				text-decoration: none;
@@ -158,7 +156,7 @@ header {
 
 .button {
 	border-radius: 2px;
-	@include transition-duration(200ms);
+	transition-duration: 200ms;
 
 	&:hover {
 		color: inherit;
